--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,11 +11,19 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>TC004_VerifyRespiteExtraAgreementSections</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>TC001_VerifyPermanentAgreementSections</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>TC002_VerifyPermanentExtraAgreementSections</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC003_VerifyRespiteAgreementSections</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
