--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="647d63">  <td>22/12/09 10:41:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyDocument.TC001_VerifyPermanentAgreementSections()[pri:0, instance:com.neracloud.testcases.VerifyDocument@3349e9bb]">TC001_VerifyPermanentAgreementSections</td> 
+<tr bgcolor="ef8d72">  <td>22/12/13 22:05:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyDocument.TC001_VerifyPermanentAgreementSections()[pri:0, instance:com.neracloud.testcases.VerifyDocument@293a5bf6]">TC001_VerifyPermanentAgreementSections</td> 
   <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="647d63">  <td>22/12/09 10:43:08</td>   <td>91818</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyDocument.TC002_VerifyPermanentExtraAgreementSections()[pri:0, instance:com.neracloud.testcases.VerifyDocument@3349e9bb]">TC002_VerifyPermanentExtraAgreementSections</td> 
+<tr bgcolor="ef8d72">  <td>22/12/13 22:12:19</td>   <td>430848</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyDocument.TC002_VerifyPermanentExtraAgreementSections()[pri:0, instance:com.neracloud.testcases.VerifyDocument@293a5bf6]">TC002_VerifyPermanentExtraAgreementSections</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="ef8d72">  <td>22/12/13 22:21:34</td>   <td>985676</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyDocument.TC004_VerifyRespiteExtraAgreementSections()[pri:0, instance:com.neracloud.testcases.VerifyDocument@293a5bf6]">TC004_VerifyRespiteExtraAgreementSections</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="ef8d72">  <td>22/12/13 22:15:21</td>   <td>612142</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyDocument.TC003_VerifyRespiteAgreementSections()[pri:0, instance:com.neracloud.testcases.VerifyDocument@293a5bf6]">TC003_VerifyRespiteAgreementSections</td> 
   <td>main@1510467688</td>   <td></td> </tr>
 </table>
